--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,17 @@ h1, .menu {
     background-image: linear-gradient(#42b55b, #1c4638);
   }
   
+  @mixin flex-row-center{
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+  }
+  .box {
+     @include flex-rox-center;
+     background-color: #3d4d3d;
+     font-family: 'Roboto', sans-serif;
+     padding: 30px;
+  }
   
   
   .section {
