--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 * {
-  margin: auto;
-  padding: auto;}
+  margin: 0;
+  padding: 0;}
 
 
 @media only screen and (min-width: 992px) {
